# spotify-proj

./: Makefile  README.md  playlist.py  pyproject.toml  spotify_api.py  spotify_gui.py
src/: playlist.py  spotify_api.py  spotify_gui.py
