[tool.poetry]
name = "spotify-proj"
version = "0.1.0"
description = ""
authors = ["Tim Cooper <timcooper314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.1"
numpy = "1.20.3"
matplotlib = "3.4.2"
pandas = "1.2.4"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
